域00执行完毕: B组38任务完成+C组就绪度闭环(48域核对表)+D组交接
- 执行计划: B组全部完成,8项GUI降级为附录G手册(Ubuntu桌面手工执行)
- 就绪度: 新增00-jvm-tools-readiness.md(✅32/🟡9/🔴2/✗5)+D3写作入口确认
- KP09: v7更新(素材总量/执行状态)
- 坑档案: 新增坑17(ExecutionSample.state非执行模式)/18(setsid)/19(grep匹配wrapper)
- materials/素材(不入库): screenshots 21/commands 130+/jfr-recordings 10/logs 2